Change title and site name to 'Whatever2'

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Whatever2</title>
   <link href="styles.css" rel="stylesheet">
 </head>
 <body>
 
   <header>
-    <span>Site Title</span>
+    <span>Whatever2</span>
     <nav>
       <a href="#">Home</a>
       <a href="#">About</a>
